@@ -8,8 +8,16 @@ repositories {
     mavenCentral()
 }
 
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21) // or 17, or 11
+    }
+}
+
+
 javafx {
-    version = "23"
+    version = "21"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
 }
 
@@ -25,6 +33,7 @@ test {
 }
 
 application {
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics', '-Djava.security.manager=allow']
     mainClass = 'runner.Main'
 }
 
